# Neatipy

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: format-check.yml  test.yml
neatipy/: __init__.py
neatipy/c/: dataframe_formatter.c
neatipy/caching/: __init__.py  lru.py
neatipy/core/: __init__.py  formatter.py  neatipy.py
neatipy/datastructures/: __init__.py  doubly_linked_list.py  lru_cache.py  node.py
neatipy/examples/: example1.py
neatipy/formatters/: __init__.py  base_formatter.py  bool_formatter.py  class_formatter.py  dataclass_formatter.py  dataframe_formatter.py  dataframe_formatter_c.py  dict_formatter.py  float_formatter.py  frozenset_formatter.py  int_formatter.py  list_formatter.py  numpy_array_formatter.py  set_formatter.py  string_formatter.py  tuple_formatter.py
tests/caching/: test_lru.py
tests/core/: test_formatter.py
